Lint Java 21